Add token to setup password response
